platform-infra/clusters/management/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: env-management-api-ingress
  namespace: env-management
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`env-management.appfactory.local`)
    priority: 10
    services:
    - name: env-management
      namespace: env-management
      port: 443
  tls:
    passthrough: true
  annotations:
    argocd.argoproj.io/sync-wave: "10"
